[Video Capture Service] Fix buffer retired events not getting sent on device stop

When a video capture device is stopped, the video capture service is supposed
to send callbacks to OnBufferRetired() to the receiver. A subtle message
order issue caused these events to not actually make it through to the receiver.

This CL fixes the ordering issue and adds a test case to ensure that the events
arrive.

This issue has surfaced on Android Canary, see crbug. The reason this has not
caused any issue on other platforms is probably that in most use cases, when the
device is stopped, the receiver is torn down as well.

Bug: 862055
Change-Id: I6a2d895bbcbe8d0236d1a5041ee58c6f2e8cf926
Reviewed-on: https://chromium-review.googlesource.com/1140527
Reviewed-by: Guido Urdaneta <guidou@chromium.org>
Commit-Queue: Christian Fremerey <chfremer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576053}
Former-commit-id: e7bc6c9f8c7a70a538ec3345482247efea88ae14